--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <a href="../public/signin/signin.html" class="btn btn-outline-dark me-2">Sign In</a>
-                <a href="../public/signup/signup.html" class="btn btn-maroon">Sign Up</a>
+                <a href="../signin/signin.html" class="btn btn-outline-dark me-2">Sign In</a>
+                <a href="../signup/signup.html" class="btn btn-maroon">Sign Up</a>
             </div>
         </div>
     </nav>
@@ -35,7 +35,7 @@
                     <h1>Never Miss a Class Again.</h1>
                     <p>Stay updated with class schedules, receive reminders, and stay ahead effortlessly with EAUTECH.
                     </p>
-                    <a href="../public/signup/signup.html" class="btn btn-maroon btn-lg mt-3">Get Notified Now</a>
+                    <a href="../signup/signup.html" class="btn btn-maroon btn-lg mt-3">Get Notified Now</a>
                     <a href="#features" class="btn btn-outline-dark btn-lg mt-3 ms-2">Learn More</a>
                 </div>
                 <div class="col-lg-6 text-center mt-4 mt-lg-0">
